--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@ Stir in chocolate chips and nuts.Place 1 1/2 inch balls of dough 2 inches apart 
 
 <h3>Nutrition Information</h3>
 
-Probably bad for you, but who cares. MMMMMM COOKIES!!!! nom nom nom
+<p>	Probably bad for you, but who cares. MMMMMM COOKIES!!!! nom nom nom
 
 
 So, in case you didn't know, your grandma didn't actually make this recipe, it was altered from <a target="_blank"href="http://www.opensourcefood.com/people/Amanori/recipes/mamas-recipe-the-best-chocolate-chip-cookies">Open Source Recipe</a> 
 Sorry to break the news. 
+</p>
 
 </body>
 </html>
