--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Prep Time: 45 Min</h2>
 
 
 INGREDIENTS
-<ol>
+<ul>
 <li>1 1/2 cup (3 sticks) softened butter</li>
 <li>1 cup brown sugar</li> 
 <li>1 cup granulated sugar</li>
@@ -28,11 +28,21 @@ INGREDIENTS
 <li>1/2 tsp salt</li>
 <li>4 cups chocolate chips</li> 
 <li>1 cup chopped walnuts or pecans(optional)</li>
-</ol>
+</ul>
 
 <p>
-	How to make Mama’s Recipe: TPreheat oven to 350 degrees Beat butter and sugars together until light and fluffy. Stir in pudding mix milk and vanilla extract. Beat in eggs. Add dry ingredients and stir until combined.</br>
-Stir in chocolate chips and nuts.Place 1 1/2 inch balls of dough 2 inches apart on an un greased cookie sheet. Bake 8-10 minutes or until golden brown.
+	How to make Mama’s Recipe:</br>
+	<ol>
+		<li>TPreheat oven to 350 degrees</li> 
+		<li>Beat butter and sugars together until light and fluffy.</li> 
+		<li>Stir in pudding mix milk and vanilla extract.</li> 
+		<li>Beat in eggs.</li>
+		<li>Add dry ingredients and stir until combined.</li>
+		<li>Stir in chocolate chips and nuts.</li>
+		<li>Place 1 1/2 inch balls of dough 2 inches apart on an un greased cookie sheet.</li>
+		<li>Bake 8-10 minutes or until golden brown.</li>
+	 
+	</ol> 
 </p>
 
 
